maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:79: error: not found: value h
    if (h+1==p)
        ^JediEscaper:84: error: not found: value b
    else if(b+1==p)
            ^JediEscaper:89: error: not found: value g
    else if(g+1==p)
            ^